--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "agario-client": "^1.2.4",
+    "express": "^4.10.2",
+    "socket.io": "^1.4.5",
     "socks": "^1.1.8"
   }
 }
