--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "agario-client": "^1.2.4",
     "express": "^4.10.2",
     "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
     "socks": "^1.1.8"
   }
 }
